--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -8,15 +8,15 @@ jobs:
     steps:
     - run: date
   windows:
-   runs-on: windows-latest
+    runs-on: windows-latest
     steps:
     - run: date
   macOS:
-   runs-on: macOS-latest
+    runs-on: macOS-latest
     steps:
     - run: date
   depends:
-    needs: {ubuntu,windows,macOS}
-   runs-on: ubuntu-latest
+    needs: [ubuntu, windows, macOS]
+    runs-on: ubuntu-latest
     steps:
     - run: date
